# TestToSQL_simple

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: secrets.toml
domain/sql/: service.py
infrastructure/: cache.py  database.py  llm.py  logging.py  monitoring.py  prompts.py  settings.py
langue/: translator.py
langue/translations/: en.json  fr.json  ja.json
metrics_logs/: metrics_all.json
tests/: conftest.py  test_cache.py  test_database.py  test_llm.py  test_prompts.py  test_settings.py  test_streamlit_app.py  test_streamlit_components.py  test_styles.py  test_translator.py
ui/components/: footer.py  header.py  main_content.py  sidebar.py
ui/styles/: themes.py
